bump NBTAPI version